@@ -158,6 +158,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1192590: Fix pdb's "ignore" and "condition" commands so they trap
+  the IndexError caused by passing in an invalid breakpoint number.
+
 - Patch #1599845: Add an option to disable the implicit calls to server_bind()
   and server_activate() in the constructors for TCPServer, SimpleXMLRPCServer
   and DocXMLRPCServer.
